[gd_scene load_steps=2 format=2]

[ext_resource path="res://BCNode.gd" type="Script" id=1]

[node name="BCNode" type="GraphNode"]
margin_left = 1.0
margin_top = -1.0
margin_right = 113.0
margin_bottom = 131.0
mouse_filter = 1
title = "Hash"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 0.196078, 1, 0, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 0, 0, 1 )
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Data" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 16.0
margin_top = 24.0
margin_right = 96.0
margin_bottom = 126.0

[node name="Type" type="ColorRect" parent="Data"]
editor/display_folded = true
margin_right = 80.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )
color = Color( 0.317647, 0.317647, 0.317647, 1 )

[node name="CoinBase" type="Label" parent="Data/Type"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "CoinBase"

[node name="Balance" type="Label" parent="Data"]
margin_top = 16.0
margin_right = 80.0
margin_bottom = 30.0

[node name="block" type="Label" parent="Data"]
margin_top = 34.0
margin_right = 80.0
margin_bottom = 48.0

[node name="pool" type="Label" parent="Data"]
margin_top = 52.0
margin_right = 80.0
margin_bottom = 66.0

[node name="Links" type="Label" parent="Data"]
margin_top = 70.0
margin_right = 80.0
margin_bottom = 84.0

[node name="Valid" type="Label" parent="Data"]
margin_top = 88.0
margin_right = 80.0
margin_bottom = 102.0
[connection signal="focus_entered" from="." to="." method="_on_BCNode_focus_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
